# TaperWarp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  LICENSE  PROJECT_GUIDELINES.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: TaperWarp.icns  architecture.md  developer_guide.md  math.md
docs/icons/: README.md
docs/icons/01_App_Icons/: TaperWarp.icns
examples/: benchmark.py
src/taperwarp/: __init__.py  cli.py  geometry.py  imagewarp.py  io.py
tests/: _minirunner.py  generate_fixtures.py  test_geometry.py  test_golden.py  test_imagewarp.py  test_io_cli.py  tests_fixture_defs.py
